--- a/.buddy/runpytest.yml
+++ b/.buddy/runpytest.yml
@@ -2,8 +2,10 @@
   events:
   - type: "PUSH"
     refs:
-    - ":default"
+    - "refs/heads/main"
+  no_skip_to_most_recent: true
   fail_on_prepare_env_warning: true
+  resources: "XLARGE"
   actions:
   - action: "Execute run pytest"
     type: "BUILD"
