--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -16,6 +16,7 @@ jobs:
         submodules: recursive
     - uses: actions/setup-python@v4
       with:
+        python-version: 3.9
         cache: 'pip'
     - run: |
         python -m pip install --upgrade pip
