--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -22,6 +22,10 @@ jobs:
         cd baserepo
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install flake8 ruff
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        ruff --output-format=github --select=E9,F63,F7,F82 --target-version=py37 ./pilot
+        ruff --output-format=github --target-version=py37 --ignore=F401,E402,E501 ./pilot
         pip install pytest
         cd pilot
         pytest -m "not slow and not uses_tokens and not ux_test"
