--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -1,1 +1,27 @@
+name: run pytest
+on:
+  push: {}
+  workflow_dispatch: {}
+  
+permissions:
+  id-token: write
 
+jobs:
+  test:
+    name: run pytest
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+        cache: 'pip'
+    - run: |
+        cd baserepo
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest
+        cd pilot
+        pytest -m "not slow and not uses_tokens and not ux_test"
