--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,7 @@
 steps:
   - command: |
       cd baserepo
-      python -m pip install --upgrade pip
-      pip install -r requirements.txt
-      pip install pytest
+      pipenv install -r requirements.txt
+      pipenv install pytest
       cd pilot
       pytest -m "not slow and not uses_tokens and not ux_test"
