--- a/.buddy/runpytest.yml
+++ b/.buddy/runpytest.yml
@@ -17,7 +17,7 @@
     - "pip install -r requirements.txt"
     - "pip install pytest"
     - "cd pilot"
-    - "pytest -m \"not slow and not uses_tokens and not ux_test\""
+    - "pytest -m \"not slow and not uses_tokens and not ux_test\" -k \"not get_git_commit and not get_version\""
     cached_dirs:
     - "/root/.cache/pip"
     shell: "BASH"
