--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-packages:
           pkg-manager: pip
       - python/install-packages:
-          pip-dependency-file: requirements.txt
+          pip-dependency-file: baserepo/requirements.txt
           pkg-manager: pip
       - python/install-packages:
           args: pytest
