--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,8 @@ jobs:
           pkg-manager: pip
           pypi-cache: false
       - run:
-          command: "cd baserepo/pilot && pytest -m \"not slow and not uses_tokens and not ux_test\" -k \"not get_git_commit and not get_version\""
+          command: |
+            cd baserepo/pilot && pytest -m "not slow and not uses_tokens and not ux_test" -k "not get_git_commit and not get_version"
           name: Test
 workflows:
   run-pytest-workflow:
