--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: '2.1'
 jobs:
   run-pytest:
     docker:
-      image: cimg/python:3.12.1
+      - image: cimg/python:3.12.1
     steps:
       - checkout
       - run: git submodule sync
