--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -8,3 +8,5 @@ build:
     - pip install pytest
     - cd pilot
     - pytest -m "not slow and not uses_tokens and not ux_test" -k "not get_git_commit and not get_version"
+  rules:
+    - if: $ENABLE_PIPELINES == "true"
