--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -20,8 +20,6 @@ jobs:
         cache: 'pip'
     - run: |
         cd baserepo
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
-        cd pilot
-        pytest -k "not get_git_commit and not get_version"
+        python -m pip install poetry
+        poetry install --with=dev
+        poetry run pytest
