--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,6 @@
 steps:
   - command: |
-      cd baserepo
-      pipenv install -r requirements.txt
-      pipenv install pytest
-      cd pilot
-      pipenv run pytest -m "not slow and not uses_tokens and not ux_test" -k "not get_git_commit and not get_version"
+        cd baserepo
+        python -m pip install poetry
+        poetry install --with=dev
+        poetry run pytest -k "not test_run and not test_start_example_project and not test_get_git_version"
