Update .gitlab-ci.yml - gitlab

--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -4,7 +4,6 @@ build:
     GIT_SUBMODULE_STRATEGY: recursive
   script: 
     - cd baserepo
-    - pip install -r requirements.txt
-    - pip install pytest
-    - cd pilot
-    - pytest -m "not slow and not uses_tokens and not ux_test" -k "not get_git_commit and not get_version"
+    - python -m pip install poetry
+    - poetry install --with=dev
+    - poetry run pytest -k "not test_run and not test_start_example_project and not test_get_git_version"
