--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,6 +2,9 @@ image: python:3.12.1
 pipelines:
   default:
     - step:
+        runs-on:
+          - self.hosted
+          - linux
         name: run pytest
         script: 
           - git submodule sync
