--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
+        token: ${{ secrets.PAT_TOKEN }}
         submodules: recursive
     - uses: actions/setup-python@v4
       with:
