--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,7 @@
 steps:
   - command: |
       cd baserepo
+      export PATH="/var/lib/buildkite-agent/.local/bin:$PATH"
       python3 -m pip install poetry
       poetry install --with=dev
       poetry run pytest -k "not test_run and not test_start_example_project and not test_get_git_version"
