--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -20,6 +20,7 @@ jobs:
         cache: 'pip'
     - run: |
         cd baserepo
+        python --version
         python -m pip install poetry
         poetry install --with=dev
-        poetry run pytest -k "not test_run and not test_start_example_project and not test_get_git_version"
+        poetry run pytest
